# EAST-for-3D-Digital-Rocks

./: .gitignore  README.md  main.py  pyproject.toml
experiment/: plot_logs.py
experiment/0211test/: config.txt
experiment/0211train/: config.txt  log.txt
experiment/EASTtest/: config.txt  log.txt
experiment/EASTtest/results-DRSRD/: 1801_x4_SR.mat  (+199 more)
experiment/EASTtest/results-DRSRD-tif/: 1801_x4_SR.tif  1802_x4_SR.tif  1803_x4_SR.tif  1804_x4_SR.tif  1805_x4_SR.tif  1806_x4_SR.tif  1807_x4_SR.tif  1808_x4_SR.tif  1809_x4_SR.tif  1810_x4_SR.tif  1811_x4_SR.tif  1812_x4_SR.tif  1813_x4_SR.tif  1814_x4_SR.tif  1815_x4_SR.tif  1816_x4_SR.tif  1817_x4_SR.tif  1818_x4_SR.tif  1819_x4_SR.tif  1820_x4_SR.tif  1821_x4_SR.tif  1822_x4_SR.tif  1823_x4_SR.tif  1824_x4_SR.tif  1825_x4_SR.tif  1826_x4_SR.tif  1827_x4_SR.tif  1828_x4_SR.tif  1829_x4_SR.tif  1830_x4_SR.tif  1831_x4_SR.tif  1832_x4_SR.tif  1833_x4_SR.tif  1834_x4_SR.tif  1835_x4_SR.tif  1836_x4_SR.tif  1837_x4_SR.tif  1838_x4_SR.tif  1839_x4_SR.tif  1840_x4_SR.tif  (+160 more)
experiment/EASTtrain/: config.txt  log.txt
experiment/EDSRtest/: config.txt  log.txt
experiment/EDSRtrain/: config.txt  log.txt
experiment/RCANtest/: config.txt  log.txt
experiment/RCANtrain/: config.txt  log.txt
experiment/SRCNNtest/: config.txt  log.txt
experiment/SRCNNtrain/: config.txt  log.txt
script/: convert_tif.py
src/: main.py  option.py  run.sh  test.py  trainer.py  utility.py
src/data/: __init__.py  div2k.py  drsrd.py  srdata.py
src/loss/: __init__.py  adversarial.py
src/model/: __init__.py  common.py  east.py  rcan.py
(+2000 files in other folders)
