[project]
name = "east-for-3d-digital-rocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
